# myst-manim-plugin

./: README.md  conf-int.js  example.md  interactive-example.md  manim-widget.mjs  manim.mjs  myst.yml  plugin.mjs  pyproject.toml  widget.mjs
myst_manim_widget/: __init__.py  directive.py  extension.py  magic.py  widget.py
