[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myst-manim-widget"
version = "0.1.0"
description = "Jupyter widget + MyST directive for manim-web animations"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Yehor Korotenko" }]
requires-python = ">=3.9"
dependencies = [
    "ipython>=7",
]

[project.optional-dependencies]
notebook = [
    "myst-nb>=1.0",
    "ipython>=7",
]

[project.urls]
Homepage = "https://github.com/DobbiKov/myst-manim-plugin"

[tool.hatch.build.targets.wheel]
packages = ["myst_manim_widget"]
